2002-08-21  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda.spec.in:
	* Makefile.am: added missing lines in last Ben's patch.

2002-08-21  Vivien Malerba <malerba@gnome-db.org>

	* providers/postgres/gda-postgres-provider.[hc]: modified some schemas
	to more closely return sets as described in the documentation.

2002-08-19  Ben Liblit  <liblit@acm.org>

	* configure.in: assume that the readline library depends upon the
	curses library

	* libgda.spec.in: fix version number substitutions

	* libgda.spec.in: remove some explicit "Requires:" prerequisites
	that RPM will figure out on its own; remove explicit dependency on
	older MySQL client libraries

	* libgda.spec.in: require that the ODBC development package be
	installed if we are building the ODBC provider

	* libgda.spec.in: create distinct subpackages for each provider,
	conditional on that provider actually being enabled; some of these
	will need to be updated as the family of available providers
	changes

	* libgda.spec.in: update files list to match what "make install"
	actually installs

	* Makefile.am: no need to explicitly list "*.in" files for
	distribution, as automake takes care of these implicitly; use
	standard $(EXTRA_DIST) list for distributing spec file

2002-08-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/default/gda-default-provider.c
	(gda_default_provider_get_database): new class method.
	
2002-08-18  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* providers/postgres/gda-postgres-provider.c: implemented
	get_server_version.

	* providers/postgres/gda-postgres-provider.h: added version to
	private connection data.

	* testing/client.c: display server version.

2002-08-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/default/gda-default-provider.c
	(gda_default_provider_get_version): new method.
	(gda_default_provider_get_server_version): new method.

2002-08-18  Holger Thon <holger.thon@gnome-db.org>

	* providers/freetds/gda-freetds-provider.c: